# haskell-first-principles

./: README.md
Ch10/: Exercise10.hs  data-process.hs  (+1 more)
Ch14/addition/: Addition.hs  addition.cabal
Ch14/addition/.stack-work/: stack.sqlite3
Ch14/addition/.stack-work/ghci/1a647dda/: cabal_macros.h
Ch14/addition/.stack-work/ghci/2d924203/: cabal_macros.h
Ch14/addition/.stack-work/install/x86_64-linux/082fe909fd82cd9441ddd9497cf027e6c337cd629ed5b98330e37162c894847a/8.6.5/lib/x86_64-linux-ghc-8.6.5/addition-0.1.0.0-3sO0pyaDdnKog8ljazeSH/: Addition.hi
Ch14/addition/.stack-work/install/x86_64-linux/082fe909fd82cd9441ddd9497cf027e6c337cd629ed5b98330e37162c894847a/8.6.5/lib/x86_64-linux-ghc-8.6.5/addition-0.1.0.0-Abb9DXx47205IHZyG945D1/: Addition.dyn_hi  Addition.hi
Ch14/addition/.stack-work/install/x86_64-linux/082fe909fd82cd9441ddd9497cf027e6c337cd629ed5b98330e37162c894847a/8.6.5/pkgdb/: addition-0.1.0.0-3sO0pyaDdnKog8ljazeSH.conf  package.cache
Ch19/Exercise19/: Exercise19.cabal  README.md
Ch19/Exercise19/.stack-work/: stack.sqlite3
Ch19/Exercise19/.stack-work/ghci/1bc25fc4/: cabal_macros.h
Ch19/Exercise19/.stack-work/ghci/5df4e1d5/: cabal_macros.h
Ch19/Exercise19/.stack-work/ghci/92b4717d/: cabal_macros.h
Ch19/Exercise19/.stack-work/ghci/9ac10d28/: cabal_macros.h
Ch19/Exercise19/.stack-work/ghci/a8d32892/: cabal_macros.h
Ch19/Exercise19/.stack-work/ghci/b8305883/: cabal_macros.h
Ch19/Exercise19/.stack-work/ghci/c90d5c21/: cabal_macros.h
Ch19/Exercise19/.stack-work/ghci/d37cfd44/: cabal_macros.h
Ch19/Exercise19/src/: Functor.hs  Main.hs
(+254 files in other folders)
