name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              wonderbear here
maintainer:          example@example.com
copyright:           2019 wonderbear here
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    ,  hspec
                    ,  QuickCheck
