cabal-version: >=1.10
name: Exercise19
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2019 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/Exercise19#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

executable Exercise19
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base >=4.7 && <5,
        scotty -any,
        persistent -any,
        conduit -any
